# awsm-renderer

./: .gitignore  Cargo.toml  DEBUG_MIPMAPS.md  FIX_CAMERA_MATRICES.md  MIPMAP_CONTINUED.md  MULTISAMPLE_OPTIMIZATION.md  OPTIMIZED_BUFFERS_PLAN.md  PASS_DERIVS.md  QUICK_SUMMARY.txt  README.md  ROADMAP.md  TEXTURE_LOD_ANALYSIS.md  TEXTURE_LOD_ANALYSIS_README.md  TEXTURE_LOD_FIXES.md  TEXTURE_LOD_PIPELINE_DIAGRAM.md  TEXTURE_LOD_START_HERE.md  TEXTURE_TRANSFORMS.md  TILE_AWARE_MIP_GENERATION.md  TODO.md  TODO_EXTENSIONS.md  TODO_SHADERS_REFACTOR.md  TO_BE_CONTINUED.md  TRANSPARENT_ATTRIBUTES.md  Taskfile.yml  demo-87d7fabdd3fc7920.js  demo-87d7fabdd3fc7920_bg.wasm  index.html  justfile  texture_repeat_derivatives_wgsl.md
.cargo/: config.toml
crates/editor/: Cargo.toml  README.md
crates/editor/src/: lib.rs  transform_controller.rs
crates/editor/src/grid/: mod.rs  pipelines.rs  render.rs
crates/editor/src/grid/shaders/: grid.wgsl
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: config.rs  header.rs  logger.rs  main.rs  prelude.rs  route.rs
crates/frontend/src/atoms/: buttons.rs  checkbox.rs  dropdown.rs  mod.rs  modal.rs  text_area.rs  text_input.rs
crates/frontend/src/atoms/dynamic_svg/: close_x.rs  more_arrow.rs
crates/frontend/src/models/: collections.rs
crates/frontend/src/pages/: app.rs  mod.rs  not_found.rs
crates/frontend/src/pages/app/: canvas.rs  content.rs  context.rs  renderer.rs  scene.rs  sidebar.rs
crates/frontend/src/theme/: misc.rs  mod.rs  stylesheet.rs  typography.rs  z_index.rs
crates/frontend/src/theme/color/: aliases.rs
crates/renderer/: Cargo.toml  askama.toml
crates/renderer-core/: Cargo.toml  README.md
crates/renderer-core/src/: alignment.rs  bind_groups.rs  buffer.rs  buffers.rs  command.rs  compare.rs  compatibility.rs  configuration.rs  cubemap.rs  data.rs  error.rs  image.rs  lib.rs  methods.rs  pipeline.rs  renderer.rs  sampler.rs  shaders.rs  texture.rs
crates/renderer-core/src/brdf_lut/: generate.rs  mod.rs  shader.wgsl
crates/renderer-core/src/command/: color.rs  compute_pass.rs  copy_texture.rs  render_pass.rs
crates/renderer-core/src/cubemap/: images.rs  ktx.rs
crates/renderer-core/src/image/: atlas.rs  bitmap.rs  element.rs  exr.rs  mipmap.rs  mipmap_shader.wgsl
crates/renderer-core/src/image/atlas/: atlas_shader.wgsl  pipeline.rs  shader.wgsl  writer.rs
crates/renderer-core/src/pipeline/: compare.rs  constants.rs  depth_stencil.rs  fragment.rs  layout.rs  multisample.rs  primitive.rs  vertex.rs
crates/renderer-core/src/shaders/: preprocess.rs
crates/renderer-core/src/texture/: blit.rs  clear.rs  convert_srgb.rs  exporter.rs  mega_texture.rs  mipmap.rs  mipmap.rs.backup  texture_pool.rs
crates/renderer-core/src/texture/mega_texture/: mipmap.rs  pipeline.rs  report.rs  shader.wgsl  writer.rs
crates/renderer-core/src/texture/mipmap/: shader.wgsl
crates/renderer-core/src/texture/texture_pool/: report.rs
crates/renderer-scene/: Cargo.toml
crates/renderer-scene/src/: lib.rs  renderer.rs
crates/renderer-scene/src/gltf/: init.rs  loader.rs  mod.rs
crates/renderer/src/: animation.rs  anti_alias.rs  bind_group_layout.rs  bind_groups.rs  bounds.rs  camera.rs  debug.rs  dynamic_buffer.rs  dynamic_uniform_buffer.rs  environment.rs  error.rs  frustum.rs  instances.rs  lib.rs  lights.rs  materials.rs  mesh.rs  meshes.rs  picker.rs  pipeline.rs  pipeline_layouts.rs  pipelines.rs  post_process.rs  render.rs  render_passes.rs  render_textures.rs  renderable.rs  renderer.rs  shaders.rs  skin.rs  textures.rs  transform.rs  transforms.rs  update.rs  wip.rs
crates/renderer/src/animation/: animations.rs  clip.rs  data.rs  error.rs  interpolate.rs  mod.rs  player.rs  sampler.rs
crates/renderer/src/bind_groups/: buffer.rs  material.rs  material_textures.rs  uniform_storage.rs
crates/renderer/src/buffer/: bind_groups.rs  dynamic_buddy.rs  dynamic_fixed.rs  dynamic_storage.rs  dynamic_uniform.rs  helpers.rs  mod.rs
crates/renderer/src/buffers/: bind_group.rs  dynamic.rs  dynamic_buddy.rs  dynamic_fixed.rs  helpers.rs  mod.rs  storage.rs
crates/renderer/src/frustum/: tests.rs
crates/renderer/src/gltf/: accessors.rs  animation.rs  buffers.rs  cache.rs  data.rs  error.rs  init.rs  layout.rs  loader.rs  materials.rs  mod.rs  pipelines.rs  populate.rs  shaders.rs  transform.rs
crates/renderer/src/gltf/buffers/: accessor.rs  attributes.rs  helpers.rs  index.rs  mesh.rs  morph.rs  normals.rs  skin.rs  tangents.rs  triangle.rs  vertex.rs  visibility.rs
crates/renderer/src/gltf/populate/: animation.rs  material.rs  mesh.rs  skin.rs  transforms.rs
crates/renderer/src/lights/: ibl.rs
crates/renderer/src/materials/: full_screen_quad.rs  pbr.rs  post_process.rs  unlit.rs  writer.rs
crates/renderer/src/materials/pbr/: buffers.rs  material.rs  mod.rs
crates/renderer/src/mesh/: buffer_info.rs  error.rs  meshes.rs  meta.rs  morphs.rs  skins.rs
crates/renderer/src/mesh/meta/: geometry_meta.rs  material_meta.rs  material_opaque_meta.rs
crates/renderer/src/meshes/: buffer_info.rs  error.rs  mesh.rs  meta.rs  morphs.rs  skins.rs
crates/renderer/src/meshes/meta/: geometry_meta.rs  material_meta.rs
crates/renderer/src/picker/: state.rs
crates/renderer/src/pipeline/: cache.rs  pipelines.rs
crates/renderer/src/pipelines/: compute_pipeline.rs  render_pipeline.rs
crates/renderer/src/render/: context.rs  error.rs  post_process.rs  textures.rs
crates/renderer/src/render/post_process/: camera_jitter.rs  error.rs  uniforms.rs
crates/renderer/src/render_passes/: mod.rs  shader_cache_key.rs  shader_template.rs
crates/renderer/src/render_passes/composite/: bind_group.rs  pipeline.rs  render.rs  render_pass.rs
crates/renderer/src/render_passes/display/: bind_group.rs  mod.rs  pipeline.rs  render.rs  render_pass.rs
crates/renderer/src/shaders/: camera.wgsl  main.wgsl  mesh.rs  pbr.rs  post_process.rs
crates/renderer/src/skin/: error.rs  skins.rs
crates/renderer/src/transform/: buffer.rs  error.rs  mod.rs  transforms.rs
crates/renderer/src/uniforms/: bind_group.rs  mod.rs
(+305 files in other folders)
