[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
description = "awsm renderer"
edition = "2021"
version = "0.1.0-alpha.3"
license = "MIT"
authors = ["David Komer"]
rust-version = "1.80.0"

### Profiles

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."awsm-renderer"]
opt-level = 1

[profile.dev.package."awsm-renderer-core"]
opt-level = 1

[profile.dev.package.frontend]
opt-level = 1

### Dependencies

[workspace.dependencies]
# Local
awsm-renderer = { path = "./crates/renderer" }
awsm-renderer-core = { version = "0.1.0-alpha.1", path = "./crates/renderer-core" }

# Misc
cfg-if = "1.0.0"
ordered-float = "5.0.0"

# Error handling
anyhow = "1.0.95"
thiserror = "2.0.12"

# Async
futures = "0.3.31"

# Data formats
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
const-hex = "1.14.0"

# Logging
tracing-subscriber = {version ="0.3.19", features = ["env-filter"]}
tracing = "0.1.41"
tracing-panic = "0.1.2"

# Collections
slotmap = "1.0.7"

# Template
askama = {version = "0.13.1", default-features = false, features = ["config", "derive", "std"]}

# Math
glam = {version = "0.30.1", features = ["bytemuck"]}

# Media
gltf = {version = "1.4.1", features = ["KHR_lights_punctual", "extensions"]}
exr = "1.73.0"

# Browser bindings and helpers
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
gloo-net = {version = "0.6.0", features = ["http"]}

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Window",
    "BlobPropertyBag",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement",
    "Performance",
    "HtmlCanvasElement",
    "MessageEvent",
    "StyleSheet",
    "CssStyleDeclaration",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuRenderPipeline", 
    "GpuRenderPipelineDescriptor",
    "GpuVertexState",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuVertexStepMode",
    "GpuFragmentState",
    "GpuMultisampleState",
    "GpuDepthStencilState",
    "GpuCompareFunction",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuCullMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuTextureFormat",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuColorTargetState",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuPipelineError",
    "GpuPipelineErrorReason",
    "GpuCommandEncoder",
    "GpuCommandBuffer",
    "GpuCommandEncoderDescriptor",
    "GpuTextureAspect",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuExternalTextureBindingLayout",
    "GpuSamplerBindingLayout",
    "GpuStorageTextureBindingLayout",
    "GpuTextureBindingLayout",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBufferBindingType",
    "GpuSamplerBindingType",
    "GpuStorageTextureAccess",
    "GpuTextureViewDimension",
    "GpuTextureSampleType",
    "GpuBufferBinding",
    "GpuBuffer",
    "GpuBufferMapState",
    "GpuExternalTexture",
    "GpuExternalTextureDescriptor",
    "HtmlVideoElement",
    "VideoFrame",
    "GpuSamplerDescriptor",
    "GpuSampler",
    "GpuAddressMode",
    "GpuFilterMode",
    "GpuMipmapFilterMode",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureDescriptor",
    "GpuTexture",
    "GpuTextureDimension",
    "GpuQueue",
    "GpuComputePassDescriptor",
    "GpuComputePassTimestampWrites",
    "GpuComputePassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassTimestampWrites",
    "GpuRenderPassEncoder",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuExtent3dDict",
    "GpuOrigin3dDict",
    "GpuTexelCopyBufferInfo",
    "GpuTexelCopyTextureInfo",
    "GpuTexelCopyBufferLayout",
    "GpuBufferDescriptor",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "gpu_buffer_usage",
    "gpu_texture_usage",
    "gpu_shader_stage",
]