[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
description = "awsm renderer"
edition = "2021"
version = "0.1.0-alpha.3"
license = "MIT"
authors = ["David Komer"]
rust-version = "1.80.0"

### Profiles

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."awsm-renderer"]
opt-level = 1

[profile.dev.package."awsm-renderer-core"]
opt-level = 1

[profile.dev.package.frontend]
opt-level = 1

### Dependencies

[workspace.dependencies]

# Misc
cfg-if = "1.0.1"
ordered-float = "5.0.0"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Async
futures = "0.3.31"

# Data formats
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
const-hex = "1.14.1"

# Logging
tracing-subscriber = {version ="0.3.19", features = ["env-filter"]}
tracing = "0.1.41"
tracing-panic = "0.1.2"

# Collections
slotmap = {version = "1.0.7", features = ["serde"]}
indexmap = "2.12.0"

# Helper utils
strum = { version = "0.27.2", features = ["derive"] }

# Template
askama = {version = "0.14.0", default-features = false, features = ["config", "derive", "std"]}

# Math
glam = {version = "0.30.4", features = ["bytemuck"]}
half = "2.6.0"

# Media
gltf = {version = "1.4.1", features = [
    "extensions",
    "KHR_lights_punctual",
    "KHR_texture_transform",
    "KHR_materials_emissive_strength",
    "KHR_materials_unlit"
]}
exr = "1.73.0"
binpack2d = "1.0.1"
image = {version = "0.25.6", default-features = false, features = ["png"]}
ktx2 = "0.4.0"

# Browser bindings and helpers
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
gloo-net = {version = "0.6.0", features = ["http"]}
serde-wasm-bindgen = "0.6.5"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "ImageBitmap",
    "ImageBitmapOptions",
    "ImageData",
    "PremultiplyAlpha",
    "ColorSpaceConversion",
    "ImageOrientation",
    "ResizeQuality",
    "FileList",
    "File",
    "Window",
    "BlobPropertyBag",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement",
    "Performance",
    "HtmlCanvasElement",
    "MessageEvent",
    "StyleSheet",
    "CssStyleDeclaration",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuVertexState",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuVertexStepMode",
    "GpuFragmentState",
    "GpuMultisampleState",
    "GpuDepthStencilState",
    "GpuCompareFunction",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuCullMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuTextureFormat",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuColorTargetState",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuPipelineError",
    "GpuPipelineErrorReason",
    "GpuCommandEncoder",
    "GpuCommandBuffer",
    "GpuCommandEncoderDescriptor",
    "GpuTextureAspect",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuExternalTextureBindingLayout",
    "GpuSamplerBindingLayout",
    "GpuStorageTextureBindingLayout",
    "GpuTextureBindingLayout",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBufferBindingType",
    "GpuSamplerBindingType",
    "GpuStorageTextureAccess",
    "GpuTextureViewDimension",
    "GpuTextureSampleType",
    "GpuBufferBinding",
    "GpuBuffer",
    "GpuBufferMapState",
    "GpuExternalTexture",
    "GpuExternalTextureDescriptor",
    "GpuCopyExternalImageSourceInfo",
    "GpuCopyExternalImageDestInfo",
    "HtmlVideoElement",
    "VideoFrame",
    "GpuSamplerDescriptor",
    "GpuSampler",
    "GpuAddressMode",
    "GpuFilterMode",
    "GpuMipmapFilterMode",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureDescriptor",
    "GpuTexture",
    "GpuTextureDimension",
    "GpuQueue",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuProgrammableStage",
    "GpuComputePassDescriptor",
    "GpuComputePassTimestampWrites",
    "GpuComputePassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassTimestampWrites",
    "GpuRenderPassEncoder",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuExtent3dDict",
    "GpuOrigin3dDict",
    "GpuTexelCopyBufferInfo",
    "GpuTexelCopyTextureInfo",
    "GpuTexelCopyBufferLayout",
    "GpuBufferDescriptor",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "gpu_buffer_usage",
    "gpu_texture_usage",
    "gpu_shader_stage",
    "GpuCanvasAlphaMode",
    "GpuCanvasToneMappingMode",
    "GpuCanvasToneMapping",
    "GpuSupportedLimits",
    "GpuDeviceDescriptor",
    "gpu_color_write",
    "gpu_map_mode",
]
