[package]
name = "awsm-renderer-editor"
description = "awsm-renderer-editor"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
awsm-renderer = { version = "0.1.2", path = "../renderer"}
anyhow = {workspace = true}
glam = {workspace = true}
web-sys = { workspace = true}
