[package]
name = "awsm-renderer-editor"
description = "awsm-renderer-editor"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true
# WebGPU APIs in web-sys require this cfg flag
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[dependencies]
awsm-renderer = { version = "0.1.3", path = "../renderer"}
anyhow = {workspace = true}
glam = {workspace = true}
web-sys = { workspace = true}
