[package]
name = "frontend"
description = "frontend"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = {workspace = true} 
serde_json = {workspace = true} 
serde-wasm-bindgen = {workspace = true} 
anyhow = {workspace = true} 
futures = {workspace = true} 
wasm-bindgen = {workspace = true}
js-sys = {workspace = true}
wasm-bindgen-futures = {workspace = true}
dominator = {workspace = true}
dominator_helpers = {workspace = true}
futures-signals = {workspace = true}
cfg-if = {workspace = true}
gloo-events = {workspace = true}
gloo-timers = {workspace = true}
reqwest = {workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-web = { workspace = true}
tracing-panic = { workspace = true}
web-sys = { workspace = true}