[package]
name = "frontend"
description = "frontend"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
awsm-renderer = { path = "../renderer", features = ["texture-export", "ktx", "serde", "clearcoat", "sheen"] }
awsm-renderer-editor = { path = "../editor" }
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
cfg-if = {workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-panic = { workspace = true}
web-sys = { workspace = true}
gloo-net = {workspace = true}
wasm-bindgen = {workspace = true}
js-sys = {workspace = true}
wasm-bindgen-futures = {workspace = true}
glam = {workspace = true}
# Enable clearcoat/sheen features for local dev (only available via git dep)
gltf = {workspace = true, features = ["KHR_materials_clearcoat", "KHR_materials_sheen"]}

# frontend-only, so let's not confuse things, keep 'em here
serde-wasm-bindgen = "0.6.5"
gloo-events = "0.2.0"
gloo-render = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
tracing-web = "0.1.3"
dominator = "0.5.38"
futures-signals = "0.3.34"
dominator_helpers = "0.8.0"
awsm_web = {version = "0.45.0", default-features = false, features = ["dom", "file"]}
