[package]
name = "awsm-renderer-core"
description = "awsm-renderer core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["exr"]
exr = ["dep:exr"]

[dependencies]
anyhow = {workspace = true} 
futures = {workspace = true} 
wasm-bindgen = {workspace = true}
js-sys = {workspace = true}
wasm-bindgen-futures = {workspace = true}
cfg-if = {workspace = true}
reqwest = {workspace = true}
tracing = { workspace = true}
web-sys = { workspace = true}
thiserror = { workspace = true}
awsm_web = { workspace = true}
# optional deps
exr = {workspace = true, optional = true}