[package]
name = "awsm-renderer-core"
description = "awsm-renderer core"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
all = ["ktx", "exr", "image", "mega-texture", "texture-pool", "serde", "texture-export"]
ktx = ["dep:ktx2", "dep:gloo-net"]
exr = ["dep:exr", "image"]
image = ["dep:gloo-net"]
mega-texture = ["dep:binpack2d"]
texture-pool = ["image"]
serde = ["dep:serde", "dep:serde-wasm-bindgen"]
texture-export = ["dep:image", "dep:half"]

[dependencies]
anyhow = {workspace = true}
futures = {workspace = true}
wasm-bindgen = {workspace = true}
js-sys = {workspace = true}
wasm-bindgen-futures = {workspace = true}
cfg-if = {workspace = true}
tracing = { workspace = true}
web-sys = { workspace = true}
thiserror = { workspace = true}
ordered-float = { workspace = true}
indexmap = { workspace = true}

# optional deps
gloo-net = {workspace = true, optional = true}
exr = {workspace = true, optional = true}
binpack2d = {workspace = true, optional = true}
serde = {workspace = true, optional = true}
serde-wasm-bindgen = {workspace = true, optional = true}
half = {workspace = true, optional = true}
image = {workspace = true, optional = true}
ktx2 = {workspace = true, optional = true}
