[package]
name = "awsm-renderer-scene"
description = "awsm-renderer scene"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["gltf"]
gltf = [
    "dep:gltf", 
    "dep:awsm_web",
    "dep:futures",
]

[dependencies]
awsm-renderer-core = {workspace = true} 
web-sys = {workspace = true}
tracing = {workspace = true}
glam = {workspace = true}
slotmap = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
wasm-bindgen = {workspace = true}

# optional deps
futures = {workspace = true, optional = true}
gltf = {workspace = true, optional = true}
awsm_web = {workspace = true, optional = true}