[package]
name = "awsm-renderer"
description = "awsm-renderer"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["gltf", "animation"]
all = ["gltf", "animation", "clearcoat", "sheen", "awsm-renderer-core/all"]
# specifics
gltf = [
    "dep:gltf",
    "dep:gloo-net",
    "awsm-renderer-core/image",
]
animation = []
# gltf material extensions (clearcoat/sheen require unreleased gltf features, only work with git dep)
# These features gate our code. gltf's KHR_materials_clearcoat/sheen must be enabled separately (see frontend/Cargo.toml)
clearcoat = ["gltf"]
sheen = ["gltf"]
# Optional features to enable optional parts of awsm-renderer-core
ktx = ["awsm-renderer-core/ktx"]
serde = ["dep:serde", "awsm-renderer-core/serde"]
mega-texture = ["awsm-renderer-core/mega-texture"]
exr = ["awsm-renderer-core/exr"]
texture-export = ["awsm-renderer-core/texture-export"]

[dependencies]
awsm-renderer-core = { version = "0.1.0", path = "../renderer-core", features = ["texture-pool"] }
web-sys = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
slotmap = {workspace = true}
glam = {workspace = true}
askama = {workspace = true}
strum = {workspace = true}
ordered-float = {workspace = true}
indexmap = { workspace = true}
mikktspace = { workspace = true}
serde = { workspace = true, optional = true}

# Optional deps
gloo-net = {workspace = true, optional = true}
gltf = {workspace = true, optional = true}
